--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.3.3",
     "autoprefixer": "^9",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "d3": "^7.1.1",
-    "d3-array": "2.3.3",
-    "d3-scale": "3.2.0",
-    "d3-selection": "1.4.0",
-    "d3-transition": "1.2.0",
+    "d3": "^7.0.0",
+    "leaflet": "^1.7.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-d3-charts": "^0.2.8",
+    "vue-router": "^3.5.3",
+    "vue-slider-component": "^3.2.15",
+    "vue2-leaflet": "^2.7.1",
+    "vue2-leaflet-markercluster": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
